Resolves: tdf#116540 Revert "ofz infinite loop"

This reverts commit e4551b905e12aa92b7509d9b994bfae5dec3d8e0.

Change-Id: I95634dd166c51586b5da47b996993a098823ca32