editeng/source/rtf/svxrtf.cxx
@@ -288,11 +288,8 @@ void SvxRTFParser::ReadStyleTable()
     bIsInReadStyleTab = true;
     bChkStyleAttr = false;      // Do not check Attribute against the Styles
 
-    bool bLooping = false;
-
-    while (_nOpenBrakets && IsParserWorking() && !bLooping)
+    while( _nOpenBrakets && IsParserWorking() )
     {
-        auto nCurrentTokenIndex = m_nTokenIndex;
         int nToken = GetNextToken();
         switch( nToken )
         {
@@ -375,7 +372,6 @@ void SvxRTFParser::ReadStyleTable()
             }
             break;
         }
-        bLooping = nCurrentTokenIndex == m_nTokenIndex;
     }
     pStyle.reset();         // Delete the Last Style
     SkipToken();        // the closing brace is evaluated "above"
