svtools/source/svrtf/parrtf.cxx
@@ -602,12 +602,8 @@ void SvRTFParser::Continue( int nToken )
     if( !nToken )
         nToken = GetNextToken();
 
-    bool bLooping = false;
-
-    while (IsParserWorking() && !bLooping)
+    while( IsParserWorking() )
     {
-        auto nCurrentTokenIndex = m_nTokenIndex;
-
         SaveState( nToken );
         switch( nToken )
         {
@@ -664,8 +660,6 @@ NEXTTOKEN:
             SaveState( 0 );         // processed till here,
                                     // continue with new token!
         nToken = GetNextToken();
-
-        bLooping = nCurrentTokenIndex == m_nTokenIndex;
     }
     if( SvParserState::Accepted == eState && 0 < nOpenBrakets )
         eState = SvParserState::Error;
